# visAI

./: .gitignore  .pre-commit-config.yaml  FORMATTING_GUIDE.md  README.md  pyproject.toml
studio/: Researcher.py  __init__.py  agent.py  agent_gpt_researcher.py  agent_original_backup.py  datasetView.ipynb  debug_questions.py  helpers.py  regenerate_html.py  report_html.py  requirements.txt  run.py  test_fixed_questions.py  test_workflow.py
studio/agents/: select_visualizable_data_01.py
studio/datasets/: 00_dataset_summary.json  01_visualizable_dataset.json  01a_direct_columns.json  01b_synthetic_dataset_summary.json  01b_synthetic_opportunities.json  01c_binning_opportunities.json  01d_extraction_opportunities.json  02_visualization_queries.json  03_top_k_visualization_queries.json  04_computed_visualization_data.json  05_generated_vegalite_charts.json  06_generated_vegalite_charts_with_narrative.json  07_generated_research_paper_components.json  breadth_questions_data.json  dataset_profile.json  final_arrangement.json  final_report.json  final_research_questions.json  research_questions.json  research_results.json  visualizable_dataset.json
studio/prompts/: 01_select_visualizable_dataset.md  01a_detect_synthetic_opportunities.md  01a_select_direct_visualizable_columns.md  01b_detect_binning_opportunities.md  01b_detect_synthetic_opportunities.md  01b_generate_synthethic_opp_columns.md  01c_detect_binning_opportunities.md  01c_detect_extraction_opportunities.md  01d_detect_extraction_opportunities.md  (+29 more)
submission/: agent.py  report_html.py
(+30 files in other folders)
